--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.svg filter=lfs diff=lfs merge=lfs -text
+*.mdj filter=lfs diff=lfs merge=lfs -text
