Fixed .vscode config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
                 "-interaction=nonstopmode",
                 "-file-line-error",
                 "-pdf",
-                "-outdir=./requirement_document/src/build/",
+                "-outdir=./build/",
                 "%DOC%"
             ],
             "env": {}
