--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 *.svg filter=lfs diff=lfs merge=lfs -text
 *.mdj filter=lfs diff=lfs merge=lfs -text
 *.pdf filter=lfs diff=lfs merge=lfs -text
+diagrams/*.xml filter=lfs diff=lfs merge=lfs -text
