--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@
 *.mdj filter=lfs diff=lfs merge=lfs -text
 *.pdf filter=lfs diff=lfs merge=lfs -text
 diagrams/*.xml filter=lfs diff=lfs merge=lfs -text
+*.drawio filter=lfs diff=lfs merge=lfs -text
